--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script>
       async function fetchDataJason() {
         let response = await fetch("db.json");
+        let responseAsJson = response.json();
         console.log(response);
       }
     </script>
